# tmp/swagger.yaml
@@ -56,7 +56,10 @@
             }
           },
           "401": {
-            "description": "Wrong username or password"
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
           }
         }
       }
@@ -79,7 +82,10 @@
             }
           },
           "401": {
-            "description": "Пользователь не авторизован"
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
           }
         }
       }
@@ -106,7 +112,10 @@
             "description": "OK"
           },
           "401": {
-            "description": "Пользователь не авторизован"
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
           }
         }
       }
@@ -129,7 +138,10 @@
             }
           },
           "401": {
-            "description": "Пользователь не авторизован"
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
           }
         }
       }
@@ -146,7 +158,10 @@
             "description": "OK"
           },
           "401": {
-            "description": "Пользователь не авторизован"
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
           }
         }
       }
@@ -163,13 +178,46 @@
             "description": "OK"
           },
           "401": {
-            "description": "Пользователь не авторизован"
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
           }
         }
       }
     }
   },
   "definitions": {
+    "errorResult": {
+      "description": "Ответ API с ошибкой",
+      "type": "object",
+      "required": [
+        "error"
+      ],
+      "properties": {
+        "error": {
+          "type": "object",
+          "required": [
+            "code",
+            "description"
+          ],
+          "properties": {
+            "code": {
+              "description": "HTTP-статус ответа",
+              "type": "string",
+              "x-isnullable": false,
+              "example": "003-061"
+            },
+            "description": {
+              "description": "Человекопонятное описание ошибки",
+              "type": "string",
+              "x-isnullable": false,
+              "example": "Object not found"
+            }
+          }
+        }
+      }
+    },
     "item": {
       "description": "Item",
       "type": "object",
